--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -6,10 +6,12 @@
   margin: 0;
 
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
 body {
   font-family: sans-serif;
+  background-color:#f2f2f2;
 }
 /* header */
 header {
