--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -20,7 +20,9 @@ header {
   color: beige;
   margin-bottom: 20px;
 }
-
+.material-symbols-sharp {
+  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+}
 .app-bar {
   padding: 24px 20px;
 
